      data is '/bin/journalctl -f -k', but both the command path and the
      command args can be altered with the FW_MSG_READ_CMD and
      FW_MSG_READ_CMD_ARGS variables respectively.
    - Added support for systems with 'firewalld' by leveraging the
      'firewall-cmd' binary. This is done via the updated IPTables::Parse and
      IPTables::ChainMgr modules.
    - Updated all module dependencies in the deps/ directory.
    - Bug fix reported by Brad Rubenstein to ensure exiting with a proper exit
      status in 'psad --HUP' mode. This was also extended to ensure better
      exit status returns in other modes as well such as --Status, and --USR1.
      Fixes issue #11 on github.

psad-2.2.5 (02/09/2015):
    - Added signature to detect fwknop Single Packet Authorization (SPA)
      packets that are destined to the default UDP port 62201. More
      information about fwknop can be found here:

        https://www.cipherdyne.org/fwknop/

    - (Rinck Sonnenberg): Spotted install.pl exit code bug when uninstalling
      psad. Getting this fixed will enable a proper Puppet module to be
      developed which Rinck is working on.
    - (Rinck Sonnenberg) UFW and Logstash integration capabilities for psad
      are now available:

        Logstash:  https://gist.github.com/netson/cc6ffa751aa4610c13c0
        UFW:       https://gist.github.com/netson/c45b2dc4e835761fbccc

psad-2.2.4 (01/16/2015):
    - (Steve Murphy) Added the ability to run an external script whenever an
      IP is blocked. Two new config variables were added to support this
      feature, ENABLE_EXT_BLOCK_SCRIPT_EXEC and EXTERNAL_BLOCK_SCRIPT.
    - Bug fix to not create zombie whois processes when whois lookups take too
      long to complete for whatever reason (slow network, etc.). This fixes
      issue #15 on Github. The bug was reported by "3Turtles" to the psad
      mailing list, and Dan Dickey provided valuable input.