@@ -533,3 +533,7 @@ Rinck Sonnenberg
 Brad Rubenstein
     - Reported a bug where the exit status returned by 'psad --HUP' indicated
       an error condition even for no error. Fixed as Github issue 11.
+
+Shlomit Afgin
+    - Reported a bug where psad was not properly parsing the syslog
+      timestamps.
