@@ -1485,9 +1485,18 @@ sub parse_NF_pkt_str() {
     if ($pkt_str =~ /^\s*((?:\S+\s+){2}\S+)\s+(\S+)\s+kernel:/) {
         $pkt_hr->{'timestamp'}   = $1;
         $pkt_hr->{'syslog_host'} = $2;
+    } elsif ($pkt_str =~ /^\s*([\d\-]+T(?:\d{2}\:){2}\d{2}\S+)\s+(\S+)\s+kernel:/) {
+        ### 2015-03-08T02:25:11.444012+02:00 servername kernel: ...
+        $pkt_hr->{'timestamp'}   = $1;
+        $pkt_hr->{'syslog_host'} = $2;
     } else {
         $pkt_hr->{'timestamp'}   = localtime();
         $pkt_hr->{'syslog_host'} = 'unknown';
+    }
+
+    if ($debug) {
+        print "[+] timestamp: $pkt_hr->{'timestamp'}\n",
+            "    syslog hostname: $pkt_hr->{'syslog_host'}\n";
     }
 
     ### try to extract a snort sid (generated by fwsnort) from
