@@ -1,0 +1,6 @@
+2015-03-07T05:09:30.045015+02:00 servername kernel: DROP: IN=eth0 OUT= MAC=00:00:00:00:00:00:00:00:00:00:00:00:00:00 SRC=4.4.4.4 DST=1.2.3.4 LEN=40 TOS=0x00 PREC=0x00 TTL=228 ID=54321 PROTO=TCP SPT=58923 DPT=21 WINDOW=65535 RES=0x00 SYN URGP=0 
+2015-03-07T11:44:54.297029+02:00 servername kernel: DROP: IN=eth0 OUT= MAC=00:00:00:00:00:00:00:00:00:00:00:00:00:00 SRC=5.5.5.5 DST=1.2.3.4 LEN=40 TOS=0x00 PREC=0x00 TTL=227 ID=33065 PROTO=TCP SPT=60000 DPT=21 WINDOW=1024 RES=0x00 SYN URGP=0 
+2015-03-08T02:22:57.444022+02:00 servername kernel: DROP: IN=eth0 OUT= MAC=00:23:45:b8:34:3f:00:00:00:00:00:00:08:00 SRC=10.0.0.0 DST=224.0.0.1 LEN=36 TOS=0x00 PREC=0x00 TTL=1 ID=0 PROTO=2 
+2015-03-08T02:23:40.444025+02:00 servername kernel: DROP: IN=eth0 OUT= MAC=00:23:45:b8:34:3f:00:00:00:00:00:00:08:00 SRC=10.0.0.0 DST=224.0.0.1 LEN=36 TOS=0x00 PREC=0x00 TTL=1 ID=0 PROTO=2 
+2015-03-08T02:23:51.444003+02:00 servername kernel: DROP: IN=eth0 OUT= MAC=00:23:45:b8:34:3f:00:00:00:00:00:00:08:00 SRC=10.0.0.0 DST=224.0.0.1 LEN=36 TOS=0x00 PREC=0x00 TTL=1 ID=0 PROTO=2 
+2015-03-08T02:25:11.444012+02:00 servername kernel: DROP: IN=eth0 OUT= MAC=00:23:45:b8:34:3f:00:00:00:00:00:00:08:00 SRC=10.0.0.0 DST=224.0.0.1 LEN=36 TOS=0x00 PREC=0x00 TTL=1 ID=0 PROTO=2 
